k8s/identity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idnetity-dep
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idnetity
  template:
    metadata:
      labels:
        app: idnetity
    spec:
      containers:
        - name: idnetity
          image: mohidex/identity-module:main
          ports:
            - containerPort: 5000
