k8s/identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
  labels:
    app: identity-svc
spec:
  type: ClusterIP 
  ports:
    - port: 5000
  selector:
    app: identity
